# HSE_arch

./: README.md
Lab Work №1/docs/: README.md
lab_2/docs/: README.md
lab_2/docs/assets/: components_diagram.drawio  container_diagram.drawio  context_diagram.drawio
lab_2/src/: docker-compose.yml
lab_3/docs/: README.md
lab_3/docs/assets/: components_diagram2.drawio  sequence_dia.drawio  usecase_dia.drawio
lab_3/src/: .coveragerc  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  server.py
lab_3/src/alembic/: env.py
lab_3/src/password_uploader/: uploader
lab_3/src/src/fastapi_celery/: celeryconfig.py  config.json  config.py  database.py  docs.py  enums.py  exceptions.py  init_database.py
lab_3/src/src/fastapi_celery/bolid/: model.py  schemas.py  service.py  views.py
lab_3/src/src/fastapi_celery/device_data/: model.py  schemas.py  service.py  views.py
lab_3/src/src/fastapi_celery/device_install/: service.py  worker.py
lab_3/src/src/fastapi_celery/device_pin_control/: model.py  schemas.py  service.py  views.py
lab_3/src/src/fastapi_celery/device_reserve/: convert_model_schema.py  model.py  reservation_logic.py  schemas.py  service.py  views.py
lab_3/src/src/fastapi_celery/device_rs232/: schemas.py  serial_module.py  tasks.py  views.py  worker.py
lab_3/src/src/fastapi_celery/device_ssh/: schemas.py  ssh_password.py  tasks.py  views.py  worker.py
lab_3/src/src/fastapi_celery/images/: convert_model_schema.py  model.py  schemas.py  service.py  views.py
lab_4/docs/: README.md
lab_6/docs/: README.md
(+1 files in other folders)
